@@ -359,10 +359,13 @@ CONFIG_FS_ROMFS=n
 #   Provide read-only access (default is read/write)
 # CONFIG_MMCSD_SPICLOCK - Maximum SPI clock to drive MMC/SD card.
 #   Default is 20MHz.
+# CONFIG_MMCSD_SYNCHRONIZE
+#   Special synchronization logic needed
 #
 CONFIG_MMCSD_NSLOTS=1
 CONFIG_MMCSD_READONLY=n
 CONFIG_MMCSD_SPICLOCK=12500000
+CONFIG_MMCSD_SYNCHRONIZE=n
 
 #
 # TCP/IP and UDP support via uIP
